# mini-libre-chat

./: .gitignore  .pre-commit-config.yaml  README.md  TODO.md  example.env  pyproject.toml
src/mini_libre_chat/: cli.py
src/mini_libre_chat/api/: __init__.py  dependencies.py  exceptions.py  main.py
src/mini_libre_chat/api/routes/: chat.py  root.py
src/mini_libre_chat/database/: __init__.py  cli.py  constants.py  crud.py  engine.py  initialize.py
src/mini_libre_chat/database/models/: __init__.py  enums.py
src/mini_libre_chat/database/models/pydantic/: __init__.py  chat.py  message.py
src/mini_libre_chat/database/models/sqlalchemy/: __init__.py  base.py  chat.py  message.py
src/mini_libre_chat/database/schemas/: chat.py  enum.py  message.py
src/mini_libre_chat/frontend/: index.html  script.js  style.css
src/mini_libre_chat/frontend/css/: chat.css  layout.css  main.css  scrollbar.css  sidebar.css  theme-toggle.css  variables.css  welcome.css
src/mini_libre_chat/frontend/js/: chat.js  main.js  sidebar.js  theme.js  welcome.js
src/mini_libre_chat/llm/: __init__.py  connector.py  constants.py
src/mini_libre_chat/utils/: __init__.py  logging.py
tests/api/routes/: test_chat.py
tests/database/: conftest.py  test_crud.py
tests/database/models/pydantic/: test_chat.py
